--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,3 +3,6 @@
 <p>このサイトはおすすめの本を紹介するサイトとなっております。</p>
 <p>本を読みたいけど、何を読むか迷っている…そんな人の助けにもなります。</p>
 <p>さあ、おすすめの本を紹介しましょう！</p>
+
+<%= link_to '新規登録', new_user_registration_path %>
+<%= link_to 'ログイン', new_user_session_path %>
